--- a/blueprints/training/slinky-slurm/slurm/values.yaml
+++ b/blueprints/training/slinky-slurm/slurm/values.yaml
@@ -439,12 +439,15 @@ loginsets:
       [pam]
 
       [domain/DEFAULT]
-      auth_provider = ldap
-      id_provider = ldap
-      ldap_uri = ldap://ldap.example.com
-      ldap_search_base = dc=example,dc=com
-      ldap_user_search_base = ou=Users,dc=example,dc=com
-      ldap_group_search_base = ou=Groups,dc=example,dc=com
+      # auth_provider = ldap
+      # id_provider = ldap
+      # ldap_uri = ldap://ldap.example.com
+      # ldap_search_base = dc=example,dc=com
+      # ldap_user_search_base = ou=Users,dc=example,dc=com
+      # ldap_group_search_base = ou=Groups,dc=example,dc=com
+      # 不启用 LDAP, 只使用本地用户
+      id_provider = files
+      auth_provider = files
     # -- Labels and annotations.
     # Ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
     metadata: {}
